# rust-weather-report

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: di.rs  main.rs
src/apps/: mod.rs
src/apps/weather_report/: mod.rs
src/apps/weather_report/adapters/: mod.rs
src/apps/weather_report/adapters/acl/: dto.rs
src/apps/weather_report/adapters/clients/: telegram_client.rs  weather_client.rs
src/apps/weather_report/adapters/repositories/: abc_repo.rs  mod.rs
src/apps/weather_report/adapters/use_cases/: mod.rs  update_usecases.rs
src/apps/weather_report/domain/aggregates/: last_update.rs  mod.rs
src/apps/weather_report/framework_and_drivers/clients/: mod.rs  telegram_client.rs  weather_client.rs
src/apps/weather_report/framework_and_drivers/repositories/: last_update_repo.rs  mod.rs
src/apps/weather_report/usecases/: update_usecases.rs
src/infrastructure/local_db/: credentials.json  last_update.json
src/infrastructure/settings/: base.rs
src/tests/: utils.rs
src/toolbox/: utils.rs
