[package]
name = "weather_report"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = {version="1.0.99"}
log = "0.4.22"
env_logger = "0.11.6"
